--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -2,7 +2,7 @@
 <html><head>
 
       <meta charset="utf-8">
-      <title>Two Column Text</title>
+      <title>Stories From The Heart</title>
 
       <link rel="shortcut icon" href="https://i.ibb.co/NjJfSy3/blur-10.jpg">
       <link href="https://fonts.googleapis.com/css?family=Oswald|Spectral|Lato&amp;display=swap" rel="stylesheet">
