--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -186,9 +186,16 @@ The condition is called truncus arteriosus. It's caused by a glitch during pregn
             </p>
             <img src="https://picsum.photos/300?random=1">
             <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque debitis corporis perferendis 
-                    dolores vero cumque eum voluptate. Id mollitia eaque laboriosam veritatis! Quod numquam, sed 
-                    expedita id libero adipisci animi?
+                 During the operation, doctors would create a new pulmonary artery. They also would patch another problem, a hole between the heart chambers that allowed oxygen-rich and oxygen-poor blood to mix.
+Adding to the drama, such a procedure couldn't be done at their local hospital in Derby, Kansas. Caden had to be transported to Kansas City, three hours away.
+The surgery went well, or so it seemed.
+
+After his breathing tubes were removed, the patch to the hole became dislodged. A second surgery was needed to repair that. Six weeks later, they returned home to recover, but that was short-lived. Something still didn't seem right, and after a weekend with baby Caden screaming nonstop, they drove the three hours back to Kansas City.
+Doctors said Caden was in heart failure again. He had his second open-heart surgery, repairing the new pulmonary artery. His chest was too swollen to close after surgery, so doctors covered it with bandages overnight.
+During the night, his heart stopped beating, and doctors manually massaged his heart for 45 minutes before it restarted. He spent the next eight days connected to a machine that breathed and pumped blood for him.
+"They talked about possibly having to turn off the machine if things did not improve," Ashlea said. "They talked about how he could have brain damage because he had CPR for so long."
+Three and a half months after Caden was hospitalized for his first heart surgery, he went home. Unlike that initial trip home with a fat, seemingly healthy baby, the Konecnys faced all sorts of challenges.
+Caden had a feeding tube and required twice-daily injections of blood thinners, as well as other medications. He couldn't hold up his head or roll over like other kids his age, and he couldn't swallow because his vocal cords were temporarily paralyzed. A variety of specialists visited the house to help him overcome those challenges.
             </p>
         </div>
         <div id="box2">
