--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -7,6 +7,7 @@
       <link rel="shortcut icon" href="https://i.ibb.co/NjJfSy3/blur-10.jpg">
       <link href="https://fonts.googleapis.com/css?family=Oswald|Spectral|Lato&amp;display=swap" rel="stylesheet">
 
+     </head>
     <style>
         #box1 {
             float: left;
@@ -43,7 +44,7 @@
             display: block;
             margin: auto;
         }
-    </style></head>
+    </style>
 
     <body>
 
