--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -52,15 +52,37 @@
             <h1>LEFT HEADER</h1>
             <p id="sub">The left header is the left header</p>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque debitis corporis perferendis 
-                dolores vero cumque eum voluptate. Id mollitia eaque laboriosam veritatis! Quod numquam, sed 
-                expedita id libero adipisci animi?
+                Rikki and Greg Myers were excited to hear whether their first child would be a boy or a girl. <br>
+Yet when the doctor spoke, the only words that mattered were, "Your baby has formed only half a heart." <br>
+The test showed their baby boy had hypoplastic left heart syndrome. With HLHS, the left side of the heart 
+doesn't develop properly while in the womb, making it impossible for the left ventricle – responsible for pumping
+ freshly oxygenated blood out to the rest of the body – to function properly. <br>
+Without immediate intervention, the congenital heart defect is fatal, usually within the first few days
+ or weeks of life.<br>
             </p>
             <img src="https://picsum.photos/300?random=1">
-            <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque debitis corporis perferendis 
-                    dolores vero cumque eum voluptate. Id mollitia eaque laboriosam veritatis! Quod numquam, sed 
-                    expedita id libero adipisci animi?
+            <p> Aside from regular checkups at Levine Children's Hospital in Charlotte, where they lived at the time, the couple carried on as usual.<br> 
+                Children born with HLHS typically undergo a set of three surgical procedures in the first few days, months and years after birth. 
+                The goal is to stabilize the heart and reconstruct it so it can pump blood with 
+                only one ventricle.<br>
+                   As soon as Dorian was born in April 2008, he was rushed to the neonatal intensivecare unit and hooked up to machines to help keep him alive until his first 
+                  surgery.<br>
+                  After surgery, Dorian spent his first month in the hospital. 
+                  But at 3 months old, his condition worsened.<br>
+                  Rikki and Greg were told if Dorian didn't have a heart transplant, he would have seven to 10 days to live.<br>
+                  Six days into what Rikki called "the hardest week we've been through," <br>
+
+                  Dr. Larry Watts, walked into Dorian's hospital room and said, 
+                        "Well, Mom and Dad, you're going to have a long night. 
+                  Dorian is getting a heart." <br>
+
+                  Greg gave Watts a bear hug, jumped off the ground and wrapped his legs 
+                  around the doctor.<br>
+
+                  When Dorian came out of the operating room the next morning, "helooked like a whole new kid.<br>
+
+                  I mean a whole new kid," Rikki said. "He'd been a blue baby all that time, and now everything was pink. Even his nail beds."
+                  Dorian went home the next week.<br>
             </p>
         </div>
         <div id="box2">
