--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -63,7 +63,9 @@
                   or weeks of life.<br><br>
             </p>
             <img src="https://picsum.photos/300?random=1"><br>
-            <p> Aside from regular checkups at Levine Children's Hospital in Charlotte, where they lived at the time, the couple carried on as usual.<br> 
+            <p> Aside from regular checkups at Levine Children's Hospital in Charlotte, where they lived at the time, 
+                  the couple carried on as usual.<br> <br>
+                  
                 Children born with HLHS typically undergo a set of three surgical procedures in the first few days, months and years after birth. 
                 The goal is to stabilize the heart and reconstruct it so it can pump blood with 
                 only one ventricle.<br><br>
