--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -5,7 +5,7 @@
       <title>Stories from the heart</title>
 
       <link rel="shortcut icon" href="https://i.ibb.co/NjJfSy3/blur-10.jpg">
-      <link href="https://fonts.googleapis.com/css?family=Oswald|Spectral|Lato&amp;display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Oswald|Spectral|Lato|McLaren&amp;display=swap" rel="stylesheet">
 
      </head>
     <style>
@@ -37,7 +37,7 @@
             margin-top: 25px;
             margin-bottom: 25px;
             font-size: 14px;
-            font-family: "lato", sans-serif;
+            font-family: "mclaren", sans-serif;
         }
         
         img {
@@ -49,7 +49,7 @@
     <body>
 
         <div id="box1">
-            <h1>Couple kept faith as their baby neared death </h1>
+            <h1>COUPLE KEPT FAITH AS THEIR BABY NEARED DEATH</h1>
             <p id="sub">Transplant saved him </p>
             <p>
                 Rikki and Greg Myers were excited to hear whether their first child would be a boy or a girl. <br><br>
@@ -92,7 +92,7 @@
             </p>
         </div>
         <div id="box2">
-            <h1>Dorian today ..</h1>
+            <h1>DORIAN TODAY ..</h1>
             <p id="sub"></p>
             <p>
                 Dorian is now 26 and enrolled at University of California pursuing his master in journalism  <br> <br>
