--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -32,6 +32,7 @@
         }
         h1 {
             text-align: center;
+            margin: auto;
             font-family: "oswald", sans-serif;
             letter-spacing: 2px;
             width: 85%
