--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -92,9 +92,10 @@
                   Greg gave Watts a bear hug, jumped off the ground and wrapped his legs 
                   around the doctor.<br><br>
 
-                  When Dorian came out of the operating room the next morning, "helooked like a whole new kid.<br><br>
+                  When Dorian came out of the operating room the next morning, "he looked like a whole new kid.<br><br>
 
-                  I mean a whole new kid," Rikki said. "He'd been a blue baby all that time, and now everything was pink. Even his nail beds."
+                  I mean a whole new kid," Rikki said. "He'd been a blue baby all that time, and now everything was pink.
+                  Even his nail beds."
                   Dorian went home the next week.<br><br>
             </p>
         </div>
