--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -33,6 +33,8 @@
         h1 {
             text-align: center;
             margin: auto;
+            margin-top: 20px;
+            margin-bottom: 20px;
             font-family: "oswald", sans-serif;
             letter-spacing: 2px;
             width: 85%
