--- a/storiesoftheheart/index.html
+++ b/storiesoftheheart/index.html
@@ -73,7 +73,7 @@
                   or weeks of life.<br><br>
             </p>
               
-              <video>
+              <video width="400" height="300" control>
                   <source src="https://youtu.be/lwix2bRo5ck">
               </video>
           
